优化代码 添加test 添加doc

--- a/example/index.html
+++ b/example/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style/index.css" />
-    <script src="./dist/index.es.js" type="module"></script>
+    <script src="./dist/index.js"></script>
   </head>
   <body>
-    <script src="./script.js" type="module"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
